--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -16,7 +16,10 @@ spring:
             allowedMethods: "*"
             allowedHeaders: "*"
 
-spring.config.import: optional:configserver:${CONFIG_SERVER_URL}
+# spring.config.import: optional:configserver:${CONFIG_SERVER_URL}
+spring.cloud.config.enabled: false
+spring.cloud.config.discovery.enabled: false
+# spring.cloud.discovery.enabled: false
 
 eureka:
   client:
